fixed alignment issue when logged in

--- a/Styles/_nav.scss
+++ b/Styles/_nav.scss
@@ -152,7 +152,7 @@ nav {
                 }
             }
 
-            a {
+            a, button {
                 display: table-cell;
                 vertical-align: middle;
                 padding-left: 1em;
